src/SNI/include/sni.hpp

typedef void (__cdecl * PIOCOMP_FN) (LPVOID m_ConsKey, SNI_Packet * pPacket, DWORD dwError);		// Consumer callback function for I/O
typedef void (__stdcall * PIOCOMP_FN) (LPVOID m_ConsKey, SNI_Packet * pPacket, DWORD dwError);		// Consumer callback function for I/O
typedef void (__cdecl * PACCEPTCOMP_FN) (SNI_Conn * pConn, LPVOID pInfo);		// Consumer callback function for Accept
typedef void (__cdecl * PIOTRACE_FN) (SNI_Conn* pSNIConn, DWORD dwOSError, DWORD dwSNIError);	// Consumer callback for tracing of errors
//----------------------------------------------------------------------------
// Name:    ProviderNum
//
// Purpose:	Enum information to identify supported providers
//
// Notes:   Ensure that the Transport providers ALWAYS follow the
//          Intermediate providers.  Also add a new provider
//          description to the ProviderName array defined in
//          sni_error.cpp, to the SNI_STRING_PROV_* ID's defined
//          in sni_rc.h, and to the Provider descriptions in 
//          system.data.txt.
//
//----------------------------------------------------------------------------
typedef enum 
{
	HTTP_PROV,
	NP_PROV,
	SESSION_PROV,
	SIGN_PROV,
	SM_PROV,
	SMUX_PROV,
	SSL_PROV,
	TCP_PROV,	
	VIA_PROV,
	CTAIP_PROV,
	MAX_PROVS,
	INVALID_PROV	// This MUST always be last entry in list!
} ProviderNum;
typedef enum 
{
	UNKNOWN_PREFIX,
	SM_PREFIX,
	TCP_PREFIX,	
	NP_PREFIX,
	VIA_PREFIX,
	INVALID_PREFIX	// This MUST always be last entry in list!	
} PrefixEnum;
//----------------------------------------------------------------------------
// Name: 	QTypes
//
// Purpose:	Enum to get/set different options associated with SNI_Conn
//			
//----------------------------------------------------------------------------

typedef enum 
{
	SNI_QUERY_CONN_INFO,
	SNI_QUERY_CONN_BUFSIZE,
	SNI_QUERY_CONN_KEY,
	SNI_QUERY_CLIENT_ENCRYPT_POSSIBLE,
	SNI_QUERY_SERVER_ENCRYPT_POSSIBLE,
	SNI_QUERY_CERTIFICATE,
	SNI_QUERY_LOCALDB_HMODULE,
	SNI_QUERY_CONN_ENCRYPT,
	SNI_QUERY_CONN_PROVIDERNUM,
	SNI_QUERY_CONN_CONNID,
	SNI_QUERY_CONN_PARENTCONNID,
	SNI_QUERY_CONN_SECPKG,
	SNI_QUERY_CONN_NETPACKETSIZE,
	SNI_QUERY_CONN_NODENUM,
	SNI_QUERY_CONN_PACKETSRECD,
	SNI_QUERY_CONN_PACKETSSENT,
	SNI_QUERY_CONN_PEERADDR,
	SNI_QUERY_CONN_PEERPORT,
	SNI_QUERY_CONN_LASTREADTIME,
	SNI_QUERY_CONN_LASTWRITETIME,
	SNI_QUERY_CONN_CONSUMER_ID,
	SNI_QUERY_CONN_CONNECTTIME,
	SNI_QUERY_CONN_HTTPENDPOINT,
	SNI_QUERY_CONN_LOCALADDR,
	SNI_QUERY_CONN_LOCALPORT,
	SNI_QUERY_CONN_SSLHANDSHAKESTATE,
	SNI_QUERY_CONN_SOBUFAUTOTUNING,
	SNI_QUERY_CONN_SECPKGNAME,
	SNI_QUERY_CONN_SECPKGMUTUALAUTH,
	SNI_QUERY_CONN_CONSUMERCONNID,
	SNI_QUERY_CONN_SNIUCI,
	SNI_QUERY_CONN_SUPPORTS_EXTENDED_PROTECTION,
	SNI_QUERY_CONN_CHANNEL_PROVIDES_AUTHENTICATION_CONTEXT,
	SNI_QUERY_CONN_PEERID,
	SNI_QUERY_CONN_SUPPORTS_SYNC_OVER_ASYNC,
	SNI_QUERY_CONN_SSL_SECCTXTHANDLE,
#ifdef SNI_BASED_CLIENT
	// NOTE: Keep all conditional QTypes at the end of the enum
	SNI_QUERY_TCP_SKIP_IO_COMPLETION_ON_SUCCESS,
#endif
    SNI_QUERY_CONN_TOP_PROVIDERNUM,
    SNI_QUERY_CONN_IPADDR,
} QTypes;
//----------------------------------------------------------------------------
// Name: 	SNI_Packet_IOType
//
// Purpose:	Determines the type of usage of a SNI_Packet
//
// Note:	SNI_Packet_KeyHolderNoBuf is used as a keyholder at Smux's Session
//			class - see Session::m_ReadPacketQueue and in Smux::m_pPacketKeyHolder
//			It is simply a "buffer-less" packet storing key and CR pointer.
//			SNI_Packet_VaryingBufferRead and SNI_Packet_VaryingBufferWrite
//			will be used by SSB to dynamically assign a buffer to them to
//			avoid memcpy ops. From SNI's point of view, these will be treated
//			as "buffer-less" packets.
//----------------------------------------------------------------------------
typedef enum
{
	SNI_Packet_Read = 0,
	SNI_Packet_Write,
	SNI_Packet_KeyHolderNoBuf,	// IMPORTANT! Has a "read" usage and completion routine
	SNI_Packet_VaryingBufferRead,
	SNI_Packet_VaryingBufferWrite,
	SNI_Packet_InvalidType	// IMPORTANT! Please do not add packet types beyond this,
							// add prior if needed.
} SNI_Packet_IOType;
//----------------------------------------------------------------------------
// Name: 	ConsumerNum
//
// Purpose:	Determines the Consumer requesting objects like SNI_Packet
//
// Note:	ConsumerNum is an enumeration introduced to track ownership of
//			the buffers in "varying buffers" SNI_Packets. The primary goal is 
//			to improve supportability and ease the debugging.
//			Currently "varying buffer" packets are used only by SSB.
//----------------------------------------------------------------------------
typedef enum
{
	SNI_Consumer_SNI = 0,
	SNI_Consumer_SSB,
	SNI_Consumer_PacketIsReleased,
	SNI_Consumer_Invalid
} ConsumerNum;
//----------------------------------------------------------------------------
// Name: 	SNI_ListenInfo
//
// Purpose:	Struct for consumers to pass in listen information
//			
//----------------------------------------------------------------------------
typedef struct
{
	ProviderNum Provider;					// Provider number
	
	union 
	{
		SslListenInfo	* pSslListenInfo;
		NpListenInfo	* pNpListenInfo;
		SmListenInfo	* pSmListenInfo;
		TcpListenInfo	* pTcpListenInfo;
		ViaListenInfo	* pViaListenInfo;
	};
}SNI_ListenInfo;
//----------------------------------------------------------------------------
// Name: 	SNI_CONSUMER_INFO
//
// Purpose:	Struct for consumer information
//
// Notes:	Consumers pass in this struct in Listen/Open
//			
//----------------------------------------------------------------------------
typedef struct Sni_Consumer_Info
{ 
	// Per-connection SNI parameters applicable to both client and server to be set before connecting
	LONG		DefaultUserDataLength;
	LPVOID 		ConsumerKey;

	// Completion routines
	PIOCOMP_FN	fnReadComp;
	PIOCOMP_FN	fnWriteComp; 
	PIOTRACE_FN fnTrace;

	// The two func pointers below are not in use by SNIX yet. When those two are ported, please update SNIOpenSyncEx method (open.cpp)
	// and add them to the second BID trace call in this method (BidTraceU7) same way they are traced now in SQL server branch.
	// fnAddProvComp;
	// fnAddProvIOCPSafeComp;

	// TODO: These are server-specific parameters. They should be moved out to an SNI_SERVER_CONSUMER_INFO struct at a later date, 
	// which will contain an SNI_CONSUMER_INFO as a member (similar to the SNI_CLIENT_CONSUMER_INFO below)
	PACCEPTCOMP_FN fnAcceptComp;
	DWORD dwNumProts;
	SNI_ListenInfo * rgListenInfo;
	DWORD_PTR	NodeAffinity;

	Sni_Consumer_Info()
	{
		DefaultUserDataLength = 0;
		ConsumerKey = NULL;
		fnReadComp = NULL;
		fnWriteComp = NULL;
		fnTrace = NULL;
		fnAcceptComp = NULL;
		dwNumProts = 0;
		rgListenInfo = NULL;
		NodeAffinity = 0;
	};
} SNI_CONSUMER_INFO, *PSNI_CONSUMER_INFO;
 

//----------------------------------------------------------------------------
// TransparentNetworkResolution Action type
//
//----------------------------------------------------------------------------
enum TransparentNetworkResolutionMode : BYTE
{
    DisabledMode = 0,
    SequentialMode,
    ParallelMode
};
//----------------------------------------------------------------------------
// Name: 	SNI_CLIENT_CONSUMER_INFO
//
// Purpose:	Struct for client consumer information
//
// Notes:	Consumers pass in this struct in Listen/Open
//			
//----------------------------------------------------------------------------
struct SNI_CLIENT_CONSUMER_INFO
{ 
	SNI_CONSUMER_INFO	ConsumerInfo;
	LPCWSTR				wszConnectionString; // input
	PrefixEnum			networkLibrary; // input
	__field_ecount(cchSPN)	LPWSTR wszSPN; // empty buffer in - filled buffer out
	DWORD				cchSPN; // input
	__field_ecount(cchInstanceName)	LPSTR szInstanceName; // empty buffer in - filled buffer out
	DWORD				cchInstanceName; // input
	BOOL				fOverrideLastConnectCache; // input
	BOOL				fSynchronousConnection; // input
	int					timeout; // input
	BOOL				fParallel; // input
	TransparentNetworkResolutionMode transparentNetworkResolution; // input
	int					totalTimeout; // input
	bool 				isAzureSqlServerEndpoint; // input

	SNI_CLIENT_CONSUMER_INFO()
	{
		wszConnectionString = NULL;
		networkLibrary = UNKNOWN_PREFIX;
		wszSPN = NULL;
		cchSPN = 0;
		szInstanceName = NULL;
		cchInstanceName = 0;
		fOverrideLastConnectCache = FALSE;
		fSynchronousConnection = FALSE;
		timeout = SNIOPEN_TIMEOUT_VALUE;
		fParallel = FALSE;
		transparentNetworkResolution = TransparentNetworkResolutionMode::DisabledMode;
		totalTimeout = SNIOPEN_TIMEOUT_VALUE;
		isAzureSqlServerEndpoint = false;
	};
};
//----------------------------------------------------------------------------
// Name: 	SNI_ERROR
//
// Purpose:	Struct to retrieve error information.
//
// Notes:	None.
//			
//----------------------------------------------------------------------------
typedef struct
{
	ProviderNum Provider;
	WCHAR     	pszErrorMessage[MAX_PATH+1];
	DWORD	    dwNativeError;
	DWORD 	    dwSNIError;

	//
	// Debug Info
	//
	WCHAR * pszFileName;
	WCHAR * pszFunction;
	DWORD	dwLineNumber;
} SNI_ERROR;
// Function Declarations

// Connection related functions
extern "C" DWORD SNIInitialize(void * pmo = NULL);
extern "C" DWORD SNITerminate();
extern "C"  DWORD SNIClose(__inout SNI_Conn * pConn);
extern "C"  DWORD SNIQueryInfo( UINT QType, __out VOID * pbQInfo);
extern "C"  DWORD SNISetInfo( __out SNI_Conn * pConn, UINT QType, __in VOID * pbQInfo);
extern "C"  DWORD SNIAddProvider(__inout SNI_Conn * pConn, ProviderNum ProvNum, __in LPVOID pInfo);
extern "C"  DWORD SNIRemoveProvider(__inout SNI_Conn * pConn, ProviderNum ProvNum);
extern "C"  DWORD SNICheckConnection(__in SNI_Conn* pConn); // Has some restrictions with previously timed-out SNIReadSync calls: see the SNI Developer Documentation for details.
// I/O Functions
extern "C"  DWORD SNIReadAsync( __out_opt SNI_Conn * pConn,
			                       	  __out SNI_Packet ** ppNewPacket,
			                       	  LPVOID pPacketKey = NULL);
extern "C"  inline void SNIPacketRelease(__inout SNI_Packet * pPacket);
extern "C"  inline void SNIPacketReset(SNI_Conn * pConn, SNI_Packet_IOType IOType, __out SNI_Packet * pPacket, ConsumerNum ConsNum);
extern "C"  inline void SNIPacketSetData(__inout SNI_Packet * pPacket, __in_bcount(cbBuf) const BYTE * pbBuf, __in DWORD cbBuf);
extern "C" DWORD SNIWaitForSSLHandshakeToComplete( __in SNI_Conn * pConn, DWORD dwMilliseconds );
// Error functions
extern "C"  void SNIGetLastError( __out SNI_ERROR * pErrorStruct );
// Security functions
extern "C"  DWORD SNISecInitPackage(__out DWORD * pcbMaxToken);